--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
             Setup the database
         </h2>
         <pre>
+            DROP DATABASE IF EXISTS CV; 
             CREATE DATABASE CV; 
-            CREATE USER ADMIN@localhost IDENTIDIED "PASS"; 
-            GRANT ALL ON CV TO ADMIN@localhost; 
+            USE CV;
+            CREATE USER 'ADMIN'@localhost IDENTIFIED BY "PASS"; 
+            GRANT ALL ON CV.* TO 'ADMIN'@localhost; 
+            DROP TABLE IF EXISTS Users;
             CREATE TABLE Users ( 
-                id INT AUTO_INCREMENT PRIMARY KEY UNIQUE,
+                id INT AUTO_INCREMENT UNIQUE PRIMARY KEY,
                 email VARCHAR(100),
                 password VARCHAR(100)
             );
+            DROP TABLE IF EXISTS Profile;
             CREATE TABLE Profile (
-                id INT AUTO_INCREMENT PRIMARY KEY UNIQUE,
+                id INT AUTO_INCREMENT UNIQUE PRIMARY KEY,
                 users_id INT,
                 year DATE,
                 CONSTRAINT FOREIGN KEY (users_id) REFERENCES Users (id) 
